feat: criado uma novo plano de 1 ano e utilizando links separado para cada um e verificando se caso o usuario esteja logado ou nao para realizar a compra.

--- a/src/app/modules/home/home.component.html
+++ b/src/app/modules/home/home.component.html
@@ -429,7 +429,7 @@
 			</div>
 
 			<!-- Cards Prices -->
-			<div class="flex flex-wrap justify-center items-center m-4">
+			<div class="flex flex-wrap justify-center items-stretch m-4">
 				<div class="p-4 xl:w-1/4 md:w-1/2 w-full">
 					<div
 						class="h-full p-6 rounded-lg border-2 border-gray-300 flex flex-col relative overflow-hidden"
@@ -496,9 +496,10 @@
 							>Lembretes Personalizados de Medicação
 						</p>
 						<button
+							(click)="freePlan()"
 							class="flex items-center mt-auto text-white bg-gray-400 border-0 py-2 px-4 w-full focus:outline-none hover:bg-gray-500 rounded"
 						>
-							Selecionar
+							{{ isLogged ? "Entrar" : "Cadastrar" }}
 							<svg
 								fill="none"
 								stroke="currentColor"
@@ -514,7 +515,7 @@
 					</div>
 				</div>
 
-				<!-- Card Premium -->
+				<!-- Card Premium MOUTH -->
 				<div class="p-4 xl:w-1/4 md:w-1/2 w-full">
 					<div
 						class="h-full p-6 rounded-lg border-2 border-blue-600 flex flex-col relative overflow-hidden"
@@ -531,7 +532,7 @@
 						<h1
 							class="text-5xl text-gray-900 leading-none flex items-center pb-4 mb-4 border-b border-gray-200"
 						>
-							<span>R$12</span>
+							<span>R$9,90</span>
 							<span class="text-lg ml-1 font-normal text-gray-500"
 								>/mês</span
 							>
@@ -638,26 +639,163 @@
 								</svg> </span
 							>Gerenciamento de Estoque de Medicamentos
 						</p>
-						<a
-							href="https://buy.stripe.com/test_4gw3ec3G99caaXe4gh"
-							target="_blank"
-							><button
-								class="flex items-center mt-auto text-white bg-blue-600 border-0 py-2 px-4 w-full focus:outline-none hover:bg-blue-600 rounded"
+						<button
+							(click)="premiumPlan30Days()"
+							class="flex items-center mt-auto text-white bg-blue-600 border-0 py-2 px-4 w-full focus:outline-none hover:bg-blue-600 rounded"
+						>
+							{{ isLogged ? "Selecionar Plano" : "Cadastrar" }}
+							<svg
+								fill="none"
+								stroke="currentColor"
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								stroke-width="2"
+								class="w-4 h-4 ml-auto"
+								viewBox="0 0 24 24"
 							>
-								Selecionar
+								<path d="M5 12h14M12 5l7 7-7 7"></path>
+							</svg>
+						</button>
+					</div>
+				</div>
+
+				<!-- Card Premium YEAR -->
+				<div class="p-4 xl:w-1/4 md:w-1/2 w-full">
+					<div
+						class="h-full p-6 rounded-lg border-2 border-blue-600 flex flex-col relative overflow-hidden"
+					>
+						<h2
+							class="text-sm tracking-widest title-font mb-1 font-medium"
+						>
+							PREMIUM
+						</h2>
+						<h1
+							class="text-5xl text-gray-900 leading-none flex items-center pb-4 mb-4 border-b border-gray-200"
+						>
+							<span>R$99,90</span>
+							<span class="text-lg ml-1 font-normal text-gray-500"
+								>/ano</span
+							>
+						</h1>
+						<p class="flex items-center text-gray-600 mb-2">
+							<span
+								class="w-4 h-4 mr-2 inline-flex items-center justify-center bg-green-400 text-white rounded-full flex-shrink-0"
+							>
 								<svg
 									fill="none"
 									stroke="currentColor"
 									stroke-linecap="round"
 									stroke-linejoin="round"
-									stroke-width="2"
-									class="w-4 h-4 ml-auto"
+									stroke-width="2.5"
+									class="w-3 h-3"
 									viewBox="0 0 24 24"
 								>
-									<path d="M5 12h14M12 5l7 7-7 7"></path>
-								</svg>
-							</button>
-						</a>
+									<path d="M20 6L9 17l-5-5"></path>
+								</svg> </span
+							>Monitoramento da Tomada de Medicação
+						</p>
+						<p class="flex items-center text-gray-600 mb-2">
+							<span
+								class="w-4 h-4 mr-2 inline-flex items-center justify-center bg-green-400 text-white rounded-full flex-shrink-0"
+							>
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2.5"
+									class="w-3 h-3"
+									viewBox="0 0 24 24"
+								>
+									<path d="M20 6L9 17l-5-5"></path>
+								</svg> </span
+							>Visualização do Histórico de Medicação
+						</p>
+						<p class="flex items-center text-gray-600 mb-2">
+							<span
+								class="w-4 h-4 mr-2 inline-flex items-center justify-center bg-green-400 text-white rounded-full flex-shrink-0"
+							>
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2.5"
+									class="w-3 h-3"
+									viewBox="0 0 24 24"
+								>
+									<path d="M20 6L9 17l-5-5"></path>
+								</svg> </span
+							>Lembretes Personalizados de Medicação
+						</p>
+						<p class="flex items-center text-gray-600 mb-2">
+							<span
+								class="w-4 h-4 mr-2 inline-flex items-center justify-center bg-green-400 text-white rounded-full flex-shrink-0"
+							>
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2.5"
+									class="w-3 h-3"
+									viewBox="0 0 24 24"
+								>
+									<path d="M20 6L9 17l-5-5"></path>
+								</svg> </span
+							>Convite para Cuidadores e Familiares
+						</p>
+						<p class="flex items-center text-gray-600 mb-2">
+							<span
+								class="w-4 h-4 mr-2 inline-flex items-center justify-center bg-green-400 text-white rounded-full flex-shrink-0"
+							>
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2.5"
+									class="w-3 h-3"
+									viewBox="0 0 24 24"
+								>
+									<path d="M20 6L9 17l-5-5"></path>
+								</svg> </span
+							>Calendário de Medicação
+						</p>
+						<p class="flex items-center text-gray-600 mb-6">
+							<span
+								class="w-4 h-4 mr-2 inline-flex items-center justify-center bg-green-400 text-white rounded-full flex-shrink-0"
+							>
+								<svg
+									fill="none"
+									stroke="currentColor"
+									stroke-linecap="round"
+									stroke-linejoin="round"
+									stroke-width="2.5"
+									class="w-3 h-3"
+									viewBox="0 0 24 24"
+								>
+									<path d="M20 6L9 17l-5-5"></path>
+								</svg> </span
+							>Gerenciamento de Estoque de Medicamentos
+						</p>
+						<button
+							(click)="premiumPlan1year()"
+							class="flex items-center mt-auto text-white bg-blue-600 border-0 py-2 px-4 w-full focus:outline-none hover:bg-blue-600 rounded"
+						>
+							{{ isLogged ? "Selecionar Plano" : "Cadastrar" }}
+							<svg
+								fill="none"
+								stroke="currentColor"
+								stroke-linecap="round"
+								stroke-linejoin="round"
+								stroke-width="2"
+								class="w-4 h-4 ml-auto"
+								viewBox="0 0 24 24"
+							>
+								<path d="M5 12h14M12 5l7 7-7 7"></path>
+							</svg>
+						</button>
 					</div>
 				</div>
 			</div>
