--- a/src/app/modules/page-activate-account/page-activate-account.component.html
+++ b/src/app/modules/page-activate-account/page-activate-account.component.html
@@ -17,6 +17,14 @@
 			{{ description }}
 		</p>
 		<div class="mt-10 flex items-center justify-center gap-x-6">
+			@if (isMobile) {
+			<a
+				routerLink="/login"
+				routerLinkActive="active"
+				class="rounded-md bg-blue-600 px-3.5 py-2.5 text-sm font-semibold text-white shadow-sm hover:bg-blue-700 focus-visible:outline focus-visible:outline-2 focus-visible:outline-offset-2 focus-visible:outline-blue-600"
+				>Fazer login
+			</a>
+			} @else {
 			<a
 				routerLink="/login"
 				routerLinkActive="active"
@@ -38,6 +46,7 @@
 				class="text-sm font-semibold text-gray-900"
 				>Contate o suporte <span aria-hidden="true">&rarr;</span></a
 			>
+			}
 		</div>
 	</div>
 </main>
