feat: links para EULA e privacy policy

--- a/src/app/modules/stdeula/stdeula.component.html
+++ b/src/app/modules/stdeula/stdeula.component.html
@@ -57,9 +57,10 @@
 	<p>
 		A Aster Tech pode coletar informações e dados relacionados ao uso do
 		Aplicativo conforme descrito em nossa
-		<a routerLink="/privacy-policy">Política de Privacidade</a>. Ao usar o
-		Aplicativo, você consente com a coleta, armazenamento e uso de suas
-		informações pessoais em conformidade com essa política.
+		<a href="https://www.seu-link.com/politica-de-privacidade"
+			>Política de Privacidade</a
+		>. Ao usar o Aplicativo, você consente com a coleta, armazenamento e uso
+		de suas informações pessoais em conformidade com essa política.
 	</p>
 
 	<h2>6. Limitação de Responsabilidade</h2>
@@ -79,13 +80,24 @@
 		imediatamente.
 	</p>
 
-	<h2>8. Jurisdição e Legislação Aplicável</h2>
+	<h2>8. EULA da Apple</h2>
+	<p>
+		Além deste EULA, ao utilizar o aplicativo, o Usuário está sujeito ao
+		<a
+			href="https://www.apple.com/legal/internet-services/itunes/dev/stdeula/"
+			target="_blank"
+		>
+			EULA padrão da Apple </a
+		>.
+	</p>
+
+	<h2>9. Jurisdição e Legislação Aplicável</h2>
 	<p>
 		Este EULA será regido pelas leis do Brasil, e qualquer disputa será
 		resolvida nos tribunais competentes do Brasil.
 	</p>
 
-	<h2>9. Disposições Gerais</h2>
+	<h2>10. Disposições Gerais</h2>
 	<p>
 		Se qualquer disposição deste EULA for considerada inválida ou
 		inexequível, as disposições restantes continuarão em pleno vigor e
