feat: adicionado tag de conversao e snippet de conversão

--- a/src/app/modules/stdeula/stdeula.component.html
+++ b/src/app/modules/stdeula/stdeula.component.html
@@ -57,10 +57,9 @@
 	<p>
 		A Aster Tech pode coletar informações e dados relacionados ao uso do
 		Aplicativo conforme descrito em nossa
-		<a href="https://www.seu-link.com/politica-de-privacidade"
-			>Política de Privacidade</a
-		>. Ao usar o Aplicativo, você consente com a coleta, armazenamento e uso
-		de suas informações pessoais em conformidade com essa política.
+		<a routerLink="/privacy-policy">Política de Privacidade</a>. Ao usar o
+		Aplicativo, você consente com a coleta, armazenamento e uso de suas
+		informações pessoais em conformidade com essa política.
 	</p>
 
 	<h2>6. Limitação de Responsabilidade</h2>
