fix: alterando para os enderecos e numeros corretos.

--- a/src/app/modules/dashboard-support/dashboard-support.component.html
+++ b/src/app/modules/dashboard-support/dashboard-support.component.html
@@ -65,7 +65,7 @@
 				class="p-2 w-full pt-8 mt-8 border-t border-gray-500 text-center"
 			>
 				<a class="text-blue-500"
-					><span>contato&#64;astertech.site</span></a
+					><span>contato&#64;astertechltda.com</span></a
 				>
 				<p class="leading-normal my-5">
 					Blumenau <br />Centro, 89037625
