--- a/src/app/modules/dashboard/dashboard.component.html
+++ b/src/app/modules/dashboard/dashboard.component.html
@@ -1,18 +1,29 @@
-<div class="dashboard-container flex flex-col p-4">
+<div
+	class="dashboard-container flex flex-col p-6 bg-gray-50 min-h-screen space-y-6"
+>
+	<!-- Loader e Containers de Toast/Dialog -->
 	<app-loader [isLoading]="showLoader"></app-loader>
 	<div #toastContainer></div>
 	<div #dialogContainer></div>
-	<div class="grid grid-cols-12 gap-4">
+
+	<!-- Primeira seção: Informações do usuário e Calendário semanal -->
+	<div class="grid grid-cols-12 gap-6">
 		<app-card-info-user
-			class="col-span-3 h-80"
+			class="col-span-12 md:col-span-4 lg:col-span-3 h-auto shadow-lg rounded-xl"
 			[user]="userInfo"
 		></app-card-info-user>
-		<app-calendar-week class="col-span-9 h-80"></app-calendar-week>
+		<app-calendar-week
+			class="col-span-12 md:col-span-8 lg:col-span-9 h-auto shadow-lg rounded-xl"
+		></app-calendar-week>
 	</div>
-	<div class="grid grid-cols-12 gap-4 mt-4">
-		<app-list-medications class="col-span-12 h-96"></app-list-medications>
+
+	<!-- Segunda seção: Lista de medicamentos e Caixa de medicamentos -->
+	<div class="grid grid-cols-12 gap-6">
+		<app-list-medications
+			class="col-span-12 lg:col-span-6 h-auto shadow-lg rounded-xl"
+		></app-list-medications>
 		<app-card-medication-pillbox
-			class="col-span-12 h-96"
+			class="col-span-12 lg:col-span-6 h-auto shadow-lg rounded-xl"
 		></app-card-medication-pillbox>
 	</div>
 </div>
